# rappct

./: .gitattributes  .gitignore  .nextest.toml  .release-please-manifest-dev.json  AGENTS.md  CHANGELOG-DEV.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  EXECUTION-PLAN.md  GH-REVIEW-SUMMARY.md  Justfile  LICENSE  MASTER-CHECKLIST.md  PIPELINE-SUMMARY.md  PROMPT.md  README.md  RULES.md  RUN-THIS-PROMPT.md  SECURITY.md  STUBS.md  TODO.md  TODO_AUTOPILOT.md  WORKFLOW.md  ci-run.txt  cliff.toml  deny.toml  prompt-powershell.md  prompt-wsl.md  release-please-config-dev.json  release-please-config.json  release-plz.toml  rule-breakers.md  rust-toolchain.toml  todo-final.md  todo-powershell.md  todo-release.md  todo-wsl.md
.AGENTS/: WORKLOG.md  lessons.md  todo.md
.AGENTS/plans/: autonomous-codebase-documentation-refresh-2026-02-25.md  autonomous-codebase-documenter-2026-02-26.md  autonomous-full-development-pipeline-2026-02-26.md  autonomous-performance-optimizer-2026-02-26.md  close-unchecked-items-2026-02-25.md  coverage-maximizer-2026-02-26.md  coverage-maximizer-round2-2026-02-26.md  dependency-upgrader-2026-02-26.md  (+6 more)
.cargo/: config.toml
.claude/: settings.local.json
.githooks/: README.md  pre-commit  pre-commit.ps1  pre-push  pre-push.ps1
.github/: dependabot.yml  pull_request_template.md
AGENTS/: WORKLOG.md
docs/: API.md  ARCHITECTURE.md  PROGRESS.md  README.md  SPEC.md  SUMMARY.md  TOOLING.md  book.toml  capabilities.md  coverage-report.md  dependency-upgrade-report.md  index.md  optimization-report.md  standardization-report.md
examples/: acrun.rs  advanced_features.rs  comprehensive_demo.rs  network_demo.rs  rappct_demo.rs
scripts/: ci-local.ps1  ci-local.sh  ci.ps1  ci.sh  enforce_advisory_policy.py  hygiene.ps1  hygiene.sh  release.ps1  release_gate.ps1  release_version_check.ps1
security/: advisory-baseline.toml
src/: acl.rs  capability.rs  diag.rs  error.rs  lib.rs  net.rs  profile.rs  sid.rs  test_support.rs  token.rs  util.rs  win_shim.rs
tests/: api_surface.rs  cap_smoke.rs  integration_launch.rs  windows_acl.rs  windows_core.rs  windows_diag.rs  windows_job_guard.rs  windows_launch.rs  windows_net.rs  windows_net_loopback_guard.rs  windows_profile.rs
(+46 files in other folders)
