[package]
name = "rappct"
version = "0.13.3"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Rust AppContainer / LPAC toolkit for Windows (profiles, capabilities, process launch, diagnostics)."
repository = "https://github.com/cpjet64/rappct"
homepage = "https://github.com/cpjet64/rappct"
documentation = "https://docs.rs/rappct"
keywords = ["windows", "appcontainer", "lpac", "sandbox", "security"]
categories = ["os::windows-apis", "security", "api-bindings"]
readme = "README.md"
exclude = [
    ".claude/",
    ".github/",
    ".githooks/",
    "scripts/",
    "docs/",
    "AGENTS.md",
    "STUBS.md",
    "RUN_EXAMPLES.md",
    "TODO.md",
    "WORKFLOW.md",
    "EXAMPLES.md",
    "cliff.toml",
    "deny.toml",
    "release-plz.toml",
    "rust-toolchain.toml",
]

# docs.rs configuration for Windows-only crate
[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
all-features = true
# Enable doc_cfg to render cfg-gated items on docs.rs
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
net = ["windows/Win32_NetworkManagement_WindowsFirewall"]
introspection = ["dep:strsim"]
tracing = ["dep:tracing"]
serde = ["dep:serde"]

[dependencies]
thiserror = "2.0"
# Suggestion helper for capability names (optional; not used yet in skeleton)
strsim = { version = "0.11", optional = true }
tracing = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

# Windows APIs are only needed/built on Windows hosts.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_WindowsProgramming",
    "Win32_System_Environment",
    "Win32_System_Memory",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes"
] }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"

[lib]
name = "rappct"
path = "src/lib.rs"
